default-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: default-backend
  name: default-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      run: default-backend
  template:
    metadata:
      labels:
        run: default-backend
    spec:
      volumes:
      - name: data
        emptyDir: {}
      containers:
      - image: nginx
        name: default-backend
        volumeMounts:
        - name: data
          mountPath: "/usr/share/nginx/html"
